# mysite

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html
mysite/: settings.py  urls.py
